<resources>
    <string name="app_name">Quiz App</string>
    <string name="buttom_name">GET STARTED</string>
    <string name="edittext_name">Your name</string>
    <string name="contactbutton_name">CHOOSE CONTACT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="quiz_result">Quiz result</string>
    <string name="again">TRY AGAIN</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz time</string>
    <string name="home">Home</string>
    <string name="list">List of questions</string>
    <string name="newquestion">New question</string>
    <string name="choose">CHOOSE IMAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testskills">TEST YOUR SKILLS</string>
    <string name="read">READ QUESTIONS</string>
    <string name="create">CREATE QUESTION</string>
    <string name="enjoy">Enjoy the quiz app, where you can:</string>
    <string name="menu_options">Menu options</string>
    <string name="subtitle">Enjoy the quiz</string>
    <string name="player">Player name:</string>
    <string name="highScore">High score</string>
    <string name="details">DETAILS</string>
    <string name="delete">DELETE</string>
    <string name="answer">Single answer</string>
    <string name="ans">Answers</string>
    <string name="addQuestion">ADD QUESTION</string>
    <string name="oneans">Answer</string>
    <string name="correctans">Correct answer</string>
</resources>